fixing/fixing navbar margin on mobile

--- a/src/assets/styles/app-style.css
+++ b/src/assets/styles/app-style.css
@@ -73,14 +73,9 @@ h3 {
     flex-wrap: wrap;
   }
 
-  /* nav {
-    text-align: left;
-    margin-left: -1rem;
-    font-size: 1rem;
-
-    padding: 1rem 0;
-    margin-top: 1rem;
-  } */
+  nav {
+    margin-bottom: 3.5em;
+  }
   
   .about {
     min-height: 100vh;
